# rust-onboarding-client

./: .env  .gitignore  Cargo.toml
docs/: auth.md  cif.md  option.md  user.md
log-snake/: log-2025-03-06.rs  log-2025-03-06.txt  log-2025-03-07.rs  log-2025-03-08.rs  log-2025-03-09.rs  log-2025-03-10.rs  log-2025-03-11.rs  log-2025-03-12.rs  log-2025-03-13.rs  log-2025-03-14.rs  log-2025-03-15.rs  log-2025-03-17.rs  log-2025-03-18.rs  log-2025-03-19.rs  log-2025-03-20.rs
reports/: failed.mustache  template.mustache
src/: main.rs
src/contexts/: connection.rs  crypto.rs  jwt_session.rs  logger.rs  model.rs
src/handlers/: admin_hanlder.rs  auth_handler.rs  file_handler.rs  generic_handler.rs  option_handler.rs  user_handler.rs
src/services/: admin_service.rs  auth_service.rs  file_service.rs  generic_service.rs  option_service.rs  user_service.rs  validation_service.rs
static/css/: style.css
