[package]
name = "actix-onboarding-client"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-identity = "0.8.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["full"] }
tiberius = { version="0.12.3" , features = ["sql-browser-tokio", "chrono"]}
chrono = "0.4.40"
uuid = "1.15.1"
futures = "0.3.31"
tokio-stream = "0.1.17"
aes = "0.8.4"
base64 = "0.22.1"
bigdecimal = { version = "0.4.7", features = ["serde"] }
ctr = "0.9.2"
env_logger = "0.11.6"
jsonwebtoken = "9.3.1"
log = "0.4.26"
sha2 = "0.10.8"